--- a/main.html
+++ b/main.html
@@ -29,19 +29,19 @@
 			</select>
 
 		<label for="Age">Age</label>
-		<input type="number" required id="age" placeholder="Age"></input>
+		<input type="number"  id="age" placeholder="Age" required></input>
 
 		<label for="DOB">DOB</label>
-		<input type="date" required id="dob"></input> 
+		<input type="date"  id="dob" required></input> 
 
 		<label for="Phone Number">Phone Number</label>
 		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
 
 		<label for="Password">Password</label>
-		<input type="password" required id="password" placeholder="Password"></input>
+		<input type="password"  id="password" placeholder="Password" required></input>
 
 		<label for="I agree to the Tos">I agree to the TOS</label>
-		<input type="checkbox" required id="tos"></input>
+		<input type="checkbox"  id="tos" required></input>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
