--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 		<label for="Female">Female</label>
 		<input name="gender" type="radio" id="gender_f" required></input><br>
 
-		<label for="Car Brands">Car Brands</label>
+		<label for="cars">Car Brands</label>
 		<select type="select" id="cars" placeholder="--Please choose an option--">
 		<option>BMW</option>
 			<option>Mercedes</option>
