--- a/main.html
+++ b/main.html
@@ -9,16 +9,16 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form method="post">
-		<label for="Name">Name</label>
+		<label for="name">Name</label>
 		<input placeholder="Name" type="" id="name" required></input>
 
-		<label for="Email">Email</label>
+		<label for="email">Email</label>
 		<input placeholder="Email" type="Email" id="email" required></input>
 
-		<label for="Male">Male</label>
+		<label for="male">Male</label>
 		<input name="gender"  type="radio" id="gender_m" required></input>
 
-		<label for="Female">Female</label>
+		<label for="female">Female</label>
 		<input name="gender" type="radio" id="gender_f" required></input><br>
 
 		<label for="cars">Car Brands</label>
@@ -28,20 +28,22 @@
 			<option>Mahindra</option>
 			</select>
 
-		<label for="Age">Age</label>
+		<label for="age">Age</label>
 		<input type="number"  id="age" placeholder="Age" required></input>
 
-		<label for="DOB">DOB</label>
+		<label for="dob">DOB</label>
 		<input type="date"  id="dob" required></input> 
 
-		<label for="Phone Number">Phone Number</label>
+		<label for="tel">Phone Number</label>
 		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
 
-		<label for="Password">Password</label>
+		<label for="password">Password</label>
 		<input type="password"  id="password" placeholder="Password" required></input>
 
 		<label for="I agree to the Tos">I agree to the TOS</label>
 		<input type="checkbox"  id="tos" required></input>
+
+		<button type="submit">Submit</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
