--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
 		<label for="password">Password</label>
 		<input type="password"  id="password" placeholder="Password" required></input>
 
-		<label for="I agree to the Tos">I agree to the TOS</label>
+		<label for="tos">I agree to the TOS</label>
 		<input type="checkbox"  id="tos" required></input>
 
 		<button type="submit">Submit</button>
